--- a/Monopoly/Monopoly.csproj
+++ b/Monopoly/Monopoly.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,16 +44,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cards\AgencyCard.cs" />
+    <Compile Include="Cards\BonusCard.cs" />
+    <Compile Include="Cards\IField.cs" />
+    <Compile Include="Cards\IPurchasable.cs" />
+    <Compile Include="Cards\PropertyCard.cs" />
+    <Compile Include="Cards\PropertyManager.cs" />
+    <Compile Include="Cards\TreasureCardManager.cs" />
+    <Compile Include="Main\Dice.cs" />
+    <Compile Include="Main\Game.cs" />
+    <Compile Include="Main\Gameplan.cs" />
+    <Compile Include="Cards\RiskCard.cs" />
+    <Compile Include="Cards\TreasureCard.cs" />
+    <Compile Include="Main\MainWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main\MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Players\AIPlayer.cs" />
+    <Compile Include="Players\HumanPlayer.cs" />
+    <Compile Include="Players\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Cards\RiskCardManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Exceptions\" />
     <Folder Include="Forms\" />
-    <Folder Include="Main\" />
-    <Folder Include="Players\" />
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Main\MainWIndow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
