Edit-proofing input files.
When a user changes the input files, accroding to severity of change it either throws and exception on wrong input or puts up with it and launches the game anyways.

--- a/Monopoly/Monopoly.csproj
+++ b/Monopoly/Monopoly.csproj
@@ -392,6 +392,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Monopoly.ico" />
+    <Content Include="Resources\resource-info.txt" />
     <None Include="Resources\jpg\image-drawn.png" />
     <None Include="Resources\jpg\playerHub.png" />
   </ItemGroup>
